{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 33,
  "lineage": "c734dd47-605c-6deb-5c65-ad3a47043e99",
  "resources": [
    {
      "module": "module.ec2_private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0024d18dcd430a770",
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:instance/i-0af54fb4123d498ac",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af54fb4123d498ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nt548-lab01-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f27f839ccbf4004",
            "private_dns": "ip-10-0-2-67.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02aa7227d82cae182",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7a9b460988ffa66",
            "tags": {
              "Name": "lab02-private-app"
            },
            "tags_all": {
              "Name": "lab02-private-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b45586d3a26a4db7"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_private.data.aws_ami.amazon_linux",
            "module.sg.aws_security_group.private_internal",
            "module.sg.aws_security_group.public_ssh",
            "module.subnets.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0024d18dcd430a770",
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:instance/i-0e509842a6f4ae4a5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e509842a6f4ae4a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nt548-lab01-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f67ba4e6dbe882e7",
            "private_dns": "ip-10-0-1-254.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-13-210-38-95.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.38.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0953f4e98b030e68a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083755898e5936e67",
            "tags": {
              "Name": "lab02-public-bastion"
            },
            "tags_all": {
              "Name": "lab02-public-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa768b0b3ae71f7e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_public.data.aws_ami.amazon_linux",
            "module.sg.aws_security_group.public_ssh",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:internet-gateway/igw-02cbf629e4d2ab9e2",
            "id": "igw-02cbf629e4d2ab9e2",
            "owner_id": "136312924479",
            "tags": {
              "Name": "igw-lab02"
            },
            "tags_all": {
              "Name": "igw-lab02"
            },
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2cb2e63c3b08f9b",
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:elastic-ip/eipalloc-0c2cb2e63c3b08f9b",
            "association_id": "eipassoc-09a48f89d1653439c",
            "domain": "vpc",
            "id": "eipalloc-0c2cb2e63c3b08f9b",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-01e78fa1b38de5b93",
            "private_dns": "ip-10-0-1-18.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-54-253-199-186.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.253.199.186",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lab02-nat-eip"
            },
            "tags_all": {
              "Name": "lab02-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2cb2e63c3b08f9b",
            "association_id": "eipassoc-09a48f89d1653439c",
            "connectivity_type": "public",
            "id": "nat-0940f6aea67fa4bea",
            "network_interface_id": "eni-01e78fa1b38de5b93",
            "private_ip": "10.0.1.18",
            "public_ip": "54.253.199.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-083755898e5936e67",
            "tags": {
              "Name": "lab02-nat-gateway"
            },
            "tags_all": {
              "Name": "lab02-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:route-table/rtb-02542d2d26de50386",
            "id": "rtb-02542d2d26de50386",
            "owner_id": "136312924479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0940f6aea67fa4bea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-private"
            },
            "tags_all": {
              "Name": "rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:route-table/rtb-01fb25ae95f5ab42c",
            "id": "rtb-01fb25ae95f5ab42c",
            "owner_id": "136312924479",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cbf629e4d2ab9e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-public"
            },
            "tags_all": {
              "Name": "rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e4baeb450cce33e",
            "route_table_id": "rtb-02542d2d26de50386",
            "subnet_id": "subnet-0b7a9b460988ffa66"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.nat.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a9463aae9438544",
            "route_table_id": "rtb-01fb25ae95f5ab42c",
            "subnet_id": "subnet-083755898e5936e67"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:security-group/sg-0b45586d3a26a4db7",
            "description": "Allow SSH only from public bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b45586d3a26a4db7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH from public instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa768b0b3ae71f7e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab02-private-internal",
            "name_prefix": "",
            "owner_id": "136312924479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-private-ssh"
            },
            "tags_all": {
              "Name": "sg-private-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.public_ssh",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:security-group/sg-0aa768b0b3ae71f7e",
            "description": "Allow SSH only from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa768b0b3ae71f7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "42.113.225.23/32"
                ],
                "description": "SSH from operator IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab02-public-ssh",
            "name_prefix": "",
            "owner_id": "136312924479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-public-ssh"
            },
            "tags_all": {
              "Name": "sg-public-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lab02-private-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:subnet/subnet-0b7a9b460988ffa66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7a9b460988ffa66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136312924479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab02-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "lab02-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "lab02-public-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:subnet/subnet-083755898e5936e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083755898e5936e67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136312924479",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab02-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "lab02-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0e4e278ef276734e1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:136312924479:vpc/vpc-0e4e278ef276734e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c65d2de7938cec15",
            "default_route_table_id": "rtb-0b126776b218e2c59",
            "default_security_group_id": "sg-0509f71cde4ccfd0d",
            "dhcp_options_id": "dopt-0fe1e93fc2d104f1f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4e278ef276734e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b126776b218e2c59",
            "owner_id": "136312924479",
            "tags": {
              "Name": "lab02-vpc"
            },
            "tags_all": {
              "Name": "lab02-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}